--- a/Frontend/majorProject/package.json
+++ b/Frontend/majorProject/package.json
@@ -20,18 +20,22 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.8",
+    "@zegocloud/zego-uikit-prebuilt": "^2.12.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "framer-motion": "^11.11.8",
+    "framer-motion": "^11.11.17",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-pdf": "^9.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
