--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-"scripts": {
+  "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
