--- a/Frontend/majorProject/package.json
+++ b/Frontend/majorProject/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cometchat-pro/react-ui-kit": "^3.0.12-pluto.beta.2",
+    "@cometchat/chat-uikit-react": "^4.3.22",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/base": "^5.0.0-beta.58",
@@ -22,13 +24,16 @@
     "@reduxjs/toolkit": "^2.2.8",
     "@zegocloud/zego-uikit-prebuilt": "^2.12.2",
     "axios": "^1.7.7",
+    "braces": "^3.0.3",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "fast-glob": "^3.3.2",
     "framer-motion": "^11.11.17",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.451.0",
+    "micromatch": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
