--- a/Frontend/majorProject/package.json
+++ b/Frontend/majorProject/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.8",
+    "@zegocloud/zego-uikit-prebuilt": "^2.12.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "framer-motion": "^11.11.8",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.451.0",
+    "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
