--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+  "start": "node -r dotenv/config src/index.js",
+  "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
