--- a/Frontend/majorProject/.env
+++ b/Frontend/majorProject/.env
@@ -1,4 +1,4 @@
-VITE_BACKEND_URL=http://localhost:8000/api/v1
+VITE_BACKEND_URL=https://freelancer-project-management-tool.onrender.com
 
 VITE_COMETCHAT_AUTH_KEY=b4159e410b1a2d3bd3251384baf7fafa0ccb43a0
 VITE_COMETCHAT_APP_ID=265056bef1a0ef2c
