--- a/Frontend/majorProject/package.json
+++ b/Frontend/majorProject/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.8",
+    "@zegocloud/zego-uikit-prebuilt": "^2.13.2",
     "axios": "^1.7.7",
     "braces": "^3.0.3",
     "class-variance-authority": "^0.7.0",
